# xgcm

./: .bumpversion.cfg  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  MITgcm_WOA13_mixing.ipynb  README.md  README.rst  SOSE-ice-validation.ipynb  SOSE-surface.ipynb  SOSE-under-ice.ipynb  channel-spectrum.ipynb  codecov.yml  environment.yml  example-SOSE.ipynb  example-channel.ipynb  mdsxray.py  mkdocs.yml  paper.bib  paper.md  pixi.toml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  sose_model_data_compare.ipynb  test_xray.ipynb  versioneer.py
.github/: pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  release_reminder.md  usage-general-question.md
.github/workflows/: ci.yaml  linting.yaml  pythonpublish.yaml  release reminder  release_reminder.yaml  release_reminder.yml  stale.yaml  twitter_bot.yml
binder/: environment.yml
ci/: environment-core-deps.yml  environment-py27-xray06.yml  environment-py27.yml  environment-py3.6.yml  environment-py3.7.yml  environment-py3.8.yml  environment-py3.9.yml  environment-py34.yml  environment-py35-xray06.yml  environment-py35.yml  environment-py36.yml  environment-py37-upstream-master.yml  environment-py37.yml  environment-upstream-dev.yml  environment.yml
datasets/: mitgcm_example_dataset.nc  mitgcm_example_dataset_v2.nc  uvwnd.10m.gauss.2018.nc
doc/: .gitignore  Makefile  api.rst  autogenerate_examples.ipynb  boundary_conditions.md  boundary_conditions.rst  conf.py  contributer_guide.rst  contributor_guide.md  contributor_guide.rst  environment.yml  example_MOM6.ipynb  example_eccov4.ipynb  example_mitgcm.ipynb  example_nemo_idealized.ipynb  grid_generation.rst  grid_metrics.ipynb  grid_topology.md  grid_topology.rst  grid_ufuncs.md  grid_ufuncs.rst  grids.md  grids.rst  how-to-release.md  index.md  index.rst  inferring_metrics.ipynb  installation.rst  make.bat  quickstart.rst  transform.ipynb  ufunc_examples.md  ufunc_examples.rst  whats-new.rst
docs/: .gitignore  api.md  boundary_conditions.md  contributor_guide.md  grid_metrics.ipynb  grid_topology.md  grid_ufuncs.md  grids.md  index.md  installation.md  transform.ipynb  ufunc_examples.md  whats-new.md
example_notebooks/: MITgcm_global_budgets.ipynb
scripts/: make_fold_schematics.py
xgcm/: __init__.py  _version.py  accessor.py  autogenerate.py  axis.py  comodo.py  duck_array_ops.py  gcmdataset.py  grid.py  grid_ufunc.py  gridops.py  mdsxray.py  metadata_parser.py  metadata_parsers.py  metrics.py  padding.py  regridding.py  sgrid.py  transform.py  vertical_grid.py
xgcm/models/mitgcm/: mds_store.py  mitgcm_mdsfiles.py  mitgcm_variables.py  utils.py  variables.py
xgcm/test/: datasets.py  global_oce_llc90.tar.gz.REMOVED.git-id  test_autogenerate.py  test_axis.py  test_calculus.py  test_deprecations.py  test_derivatives.py  test_duck_array_ops.py  test_exchange.py  test_faceconnections.py  test_fold.py  test_gcm_dataset.py  test_grid.py  test_grid_ufunc.py  test_integrate.py  test_llc.py  test_mdsxray.py  test_metadata_parser.py  test_metadata_parsers.py  test_metric_ops_multi_axis.py  test_metrics.py  test_metrics_ops.py  test_metrics_ops_single_axis.py  test_padding.py  test_transform.py  test_vertical_grid.py
