# pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xgcm"
dynamic = ["version"]
requires-python = ">=3.9"
description = "General Circulation Model Postprocessing with xarray"
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
  { name = "xgcm Developers", email = "julius@ldeo.columbia.edu" }
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]
license = { text = "MIT" }
keywords = ["pangeo", "simulations", "grids"]

dependencies = [
    "xarray>=0.20.0",
    "dask",
    "numpy",
    "future"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "scipy",
    "flake8",
    "black",
    "codecov"
]

[project.urls]
Homepage =  "https://github.com/xgcm/xgcm"
Tracker =  "https://github.com/xgcm/xgcm/issues"

[tool.setuptools.packages.find]
exclude = ["docs", "tests", "tests.*", "docs.*"]

[tool.setuptools_scm]
write_to = "xgcm/_version.py"
write_to_template = '__version__ = "{version}"'

[tool.setuptools.commands]
aliases = {test = "pytest"}

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff]
extend-select = ["T201"]
exclude = [
    "__init__.py",
    ".eggs",
    "doc"
]
ignore = [
    "E203",  # whitespace before ':'
    "E402",  # module level import not at top of file
    "E501",  # line too long
    "E731",  # do not assign a lambda expression, use a def
    "E265",  # block comment should start with ‘# ’
    "F811",  # redefinition of unused name from import
    "F722",  # allows type hinting as Gridded[DataArray, "(X:center)"]
]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
