# pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xgcm"
dynamic = ["version"]
requires-python = ">=3.9"
description = "General Circulation Model Postprocessing with xarray"
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
  { name = "xgcm Developers", email = "julius@ldeo.columbia.edu" }
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Topic :: Scientific/Engineering",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]
license = { text = "MIT" }
keywords = ["pangeo", "simulations", "grids"]

dependencies = [
    "xarray>=0.20.0",
    "dask",
    "numpy",
    "future"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "scipy",
    "flake8",
    "black",
    "codecov"
]

[project.urls]
Homepage =  "https://github.com/xgcm/xgcm"
Tracker =  "https://github.com/xgcm/xgcm/issues"

[tool.setuptools.packages.find]
exclude = ["docs", "tests", "tests.*", "docs.*"]

[tool.setuptools_scm]
write_to = "xgcm/_version.py"
write_to_template = '__version__ = "{version}"'

[tool.pytest.ini_options]
addopts = "-v"

[tool.ruff]
exclude = [
    "__init__.py",
    ".eggs",
    "doc"
]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["T201"]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = [
    "E203",  # whitespace before ':'
    "E402",  # module level import not at top of file
    "E501",  # line too long
    "E731",  # do not assign a lambda expression, use a def
    "E265",  # block comment should start with ‘# ’
    "F811",  # redefinition of unused name from import
    "F722",  # allows type hinting as Gridded[DataArray, "(X:center)"]
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pixi.workspace]
name = "xgcm-dev"
preview = ["pixi-build"]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.package]
name = "xgcm"
version = "dynamic" # dynamic versioning needs better support in pixi https://github.com/prefix-dev/pixi/issues/2923#issuecomment-2598460666 . Putting `version = "dynamic"` here for now until pixi recommends something else.

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.4.*" }

[tool.pixi.package.host-dependencies]
setuptools = "*"
setuptools_scm = "*"


[tool.pixi.package.run-dependencies] # keep section in sync with pyproject.toml dependencies
python = ">=3.9"
xarray = ">=0.20.0"
dask = "*"
numpy = "*"
future = "*"
scipy = "*" # TODO: `xgcm/test/test_grid_ufunc.py::TestGridUFuncNoPadding::test_1d_changing_size_dask_parallelized` failing if scipy isn't put here. Is scipy a core dependency? If no - move to `feature.extra` and fix test.

[tool.pixi.dependencies]
xgcm = { path = "." }

[tool.pixi.feature.extra.dependencies]
numba = "*"

[tool.pixi.feature.notebooks.dependencies]
netcdf4 = "*"

[tool.pixi.feature.minimum.dependencies]
python = "3.9.*"
xarray = "0.20.*"

# TODO: Update with rest of core deps

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
codecov= "*"

[tool.pixi.feature.nightly.pypi-dependencies]
xgcm = { path = ".", editable = true }
xarray = { git = "https://github.com/pydata/xarray" }
scipy = { version = "*", index = "https://pypi.anaconda.org/scientific-python-nightly-wheels/simple" }

[tool.pixi.feature.nightly.pypi-options.dependency-overrides]
numpy = { version = "*", index = "https://pypi.anaconda.org/scientific-python-nightly-wheels/simple" }

dask = { git = "https://github.com/dask/dask" }
distributed = { git = "https://github.com/dask/distributed" }

[tool.pixi.feature.test.tasks]
tests = "pytest -n auto"

[tool.pixi.feature.docs.dependencies]
graphviz = "*"
python-graphviz = "*"

[tool.pixi.feature.docs.pypi-dependencies]
markdown=">=3.9"
mkdocs-material=">=9.1.19"
mkdocs-autoapi = "*"
mkdocs=">=1.1.2"
mkdocs-jupyter = "*"
mkdocs-execute-plugin = "*"
mkdocstrings-python=">=1.18.2"
pyyaml=">=6.0.1"
matplotlib="*"
graphviz = "*"

[tool.pixi.feature.docs.tasks]
_setup-graphviz = "dot -c"
docs-serve = { cmd = "mkdocs serve --livereload", depends-on = ['_setup-graphviz'] }
docs-build = { cmd = "mkdocs build", depends-on = ['_setup-graphviz'] }

[tool.pixi.feature.pre-commit.dependencies]
pre_commit = "*"

[tool.pixi.feature.pre-commit.tasks]
lint = "pre-commit run --all-files"


[tool.pixi.environments]
default = { features = [
  "test",
  "extra",
  "pre-commit",
], solve-group = "main" }

test-core = { features = ["test"] }
test-latest = { features = ["test", 'extra'] }
test-nightly = { features = [
  "py313",
  "nightly",
  "test",
], no-default-feature = true }

test-minimum = { features = ["test", "minimum"] }
test-py311 = { features = ["test", "py311"] }
docs = { features = ["docs", "extra", "notebooks"], solve-group = "docs" }
